# rengine2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  scene.csv
cmake/: REngineConfig.cmake.in  sdl2-config.cmake
docs/: .gitignore  main.tex  Анализ.tex  Введение.tex  Заключение.tex  Код.tex  ЛистЗадания.tex  Обозначения.tex  Плакаты.tex  РабочийПроект.tex  Реферат.tex  СписокИсточников.tex  ТехЗадание.tex  ТехПроект.tex
docs/images/: usecase.eps
include/: Camera.h  Cube.h  CubeMesh.h  Engine.h  InputHandler.h  Logging.h  MathUtils.h  Mesh.h  RE_Window.h  Renderer.h  Scene.h  SceneLoader.h  Shader.h  SphereMesh.h  Texture.h  Utils.h  Volume.h  Window.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Cube.cpp  CubeMesh.cpp  Engine.cpp  InputHandler.cpp  MathUtils.cpp  Mesh.cpp  RE_Window.cpp  Renderer.cpp  SceneLoader.cpp  Shader.cpp  SphereMesh.cpp  Texture.cpp  Volume.cpp  Window.cpp  glad.c  main.cpp
tests/: test_main.cpp
